--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -343,13 +343,13 @@ jobs:
           asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-linux/obs-rtspserver-${{ env.TAG_VERSION }}-linux.tar.gz
           asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-linux.tar.gz
           asset_content_type: application/x-tar
-#      - name: 'Upload macos .zip artifact to release'
-#        uses: actions/upload-release-asset@v1
-#        env:
-#          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-#        with:
-#          upload_url: ${{ github.event.release.upload_url }}
-#          asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-macos/obs-rtspserver-${{ env.TAG_VERSION }}-macos.zip
-#          asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-macos.zip
-#          asset_content_type: application/zip
+      - name: 'Upload macos .zip artifact to release'
+        uses: actions/upload-release-asset@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        with:
+          upload_url: ${{ github.event.release.upload_url }}
+          asset_path: ${{ github.workspace }}/${{ env.TAG_VERSION }}-macos/obs-rtspserver-${{ env.TAG_VERSION }}-macos.zip
+          asset_name: obs-rtspserver-${{ env.TAG_VERSION }}-macos.zip
+          asset_content_type: application/zip
       
