--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -234,7 +234,7 @@ jobs:
         run: /bin/bash -c "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install.sh)"
       - name: 'Install prerequisite'
         run: |
-            brew install ffmpeg x264 qt5 git
+            brew install ffmpeg x264 qt5
       - name: 'Checkout OBS'
         uses: actions/checkout@v2
         with:
