--- a/rtsp-server/CMakeLists.txt
+++ b/rtsp-server/CMakeLists.txt
@@ -4,6 +4,7 @@ project(rtsp-server)
 set(CMAKE_INCLUDE_CURRENT_DIR ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
 include_directories("3rdpart")
+add_subdirectory(3rdpart/libb64)
 
 file(GLOB rtsp-server_net_SOURCES
 	net/*.cpp)
@@ -29,4 +30,8 @@ set(rtsp-server_HEADERS
 
 add_library(rtsp-server STATIC
 	${rtsp-server_SOURCES}
-	${rtsp-server_HEADERS})
+	${rtsp-server_HEADERS}
+	)
+
+target_link_libraries(rtsp-server
+	libb64)
